--- a/steps/identity/appellant-international-contact-details/answer.html
+++ b/steps/identity/appellant-international-contact-details/answer.html
@@ -1,8 +1,10 @@
 <dl class="govuk-summary-list">
     <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">{{ content.cya.country.question }}</dt>
+        <dt class="govuk-summary-list__key">{{ content.cya.address.question }}</dt>
         <dd class="govuk-summary-list__value">
-            {{ fields.country.value }}<br>
+            {{ fields.addressLine1.value }}<br>
+            {% if fields.addressLine2.value %}{{ fields.addressLine2.value }}<br>{% endif %}
+            {{ fields.townCity.value }}<br>
         </dd>
         <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="{{ path }}">{{ content.cya.change }}</a>
@@ -10,9 +12,9 @@
         </dd>
     </div>
     <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">{{ content.cya.address.question }}</dt>
+        <dt class="govuk-summary-list__key">{{ content.cya.country.question }}</dt>
         <dd class="govuk-summary-list__value">
-            {{ fields.internationalAddress.value }}<br>
+            {{ fields.country.value }}<br>
         </dd>
         <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="{{ path }}">{{ content.cya.change }}</a>
