--- a/steps/identity/appellant-international-contact-details/template.html
+++ b/steps/identity/appellant-international-contact-details/template.html
@@ -1,5 +1,5 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import textbox, formSection, textarea, select %}
+{% from "components/fields.njk" import textbox, formSection, select %}
 {% from "postcodeLookup/template.html" import postcodeLookup  %}
 
 {% block pageTitle %}{{ content.titleHead }} - {{ commonContent[htmlLang].windowTitleSuffix }}{% endblock %}
@@ -8,8 +8,10 @@
 {% block fields %}
     {% call formSection() %}
         <p class="govuk-body">{{ content.subtitle }}</p>
+        {{ textbox(fields.addressLine1,             content.fields.addressLine1.title,          hint="") }}
+        {{ textbox(fields.addressLine2,             content.fields.addressLine2.title,          hint="") }}
+        {{ textbox(fields.townCity,                 content.fields.townCity.title,              hint="") }}
         {{ select(fields.country,                   content.fields.country.title,               options=getCountries) }}
-        {{ textarea(fields.internationalAddress,    content.fields.internationalAddress.title,  hint="") }}
         {{ select(fields.portOfEntry,               content.fields.portOfEntry.title,           options=getPortOfEntryList) }}
         {{ textbox(fields.phoneNumber,              content.fields.phoneNumber.title,           hint=content.fields.phoneNumber.hint) }}
         {{ textbox(fields.emailAddress,             content.fields.emailAddress.title,          hint=content.fields.emailAddress.hint) }}
