formatting answer.htmls to match

--- a/steps/representative/representative-international-details/answer.html
+++ b/steps/representative/representative-international-details/answer.html
@@ -31,6 +31,8 @@
             <span class="govuk-visually-hidden"> {{ content.cya.repDetails | safe }}</span>
         </dd>
     </dl>
+</div>
+<div class="govuk-summary-list">
     <dl class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">{{ content.cya.country.question }}</dt>
         <dd class="govuk-summary-list__value">
