--- a/steps/identity/appellant-international-contact-details/answer.html
+++ b/steps/identity/appellant-international-contact-details/answer.html
@@ -11,6 +11,8 @@
             <span class="govuk-visually-hidden">{{ content.cya.yourDetails }}</span>
         </dd>
     </div>
+</dl>
+<dl class="govuk-summary-list">
     <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">{{ content.cya.country.question }}</dt>
         <dd class="govuk-summary-list__value">
@@ -21,6 +23,8 @@
             <span class="govuk-visually-hidden">{{ content.cya.yourDetails }}</span>
         </dd>
     </div>
+</dl>
+<dl class="govuk-summary-list">
     <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">{{ content.cya.portOfEntry.question }}</dt>
         <dd class="govuk-summary-list__value">
