exit page content update

--- a/steps/compliance/need-irn/template.html
+++ b/steps/compliance/need-irn/template.html
@@ -14,8 +14,7 @@
 
 {% block two_thirds %}
     {{ header(content.title, size="l") }}
-    <!-- TODO Replace dummy content -->
-    <p class="govuk-body">{{ content.someDummyContent }}</p>
+    <p class="govuk-body">{{ content.infoText }}</p>
 
     <div class="govuk-!-margin-bottom-6">
         <a class="govuk-link" href="http://www.gov.uk">{{ content.govuk }}</a>
