--- a/steps/start/independence/template.html
+++ b/steps/start/independence/template.html
@@ -27,6 +27,8 @@
                 {% block fields %}
                 {% if benefitType == 'UC' %}
                     <p class="govuk-body-l">{{ content.UCreviewed | safe }}</p>
+                {% elif infectedbloodappeal %}
+                    <p class="govuk-body-l">{{ content.IBAreviewed | safe }}</p>
                 {% else %}
                     <p class="govuk-body-l">{{ content.reviewed | safe }}</p>
                 {% endif %}
