--- a/steps/start/invalid-postcode/template.html
+++ b/steps/start/invalid-postcode/template.html
@@ -10,7 +10,9 @@
     {{ super() }}
 {% endblock %}
 
-{% block pageTitle %}{{ content.titleHead | safe }} - {{ commonContent[htmlLang].windowTitleSuffix | safe }}{% endblock %}
+{% block pageTitle %}
+{{ content.titleHead | safe }} - {{ commonContent[htmlLang].ibca.windowTitleSuffix if isIba else commonContent[htmlLang].windowTitleSuffix | safe }}
+{% endblock %}
 {% set title = content.title | safe %}
 
 {% block two_thirds %}
