--- a/steps/compliance/cant-appeal/template.html
+++ b/steps/compliance/cant-appeal/template.html
@@ -10,6 +10,9 @@
     {{ super() }}
 {% endblock %}
 
+{% block pageTitle %}
+{{ content.titleHead | safe }} - {{ commonContent[htmlLang].ibca.windowTitleSuffix if isIba else commonContent[htmlLang].windowTitleSuffix | safe }}
+{% endblock %}
 
 {% block breadcrumbs %}
     {% call phaseBanner(commonContent[htmlLang], feedbackLink + urlPath) %}
