--- a/steps/compliance/still-can-appeal/template.html
+++ b/steps/compliance/still-can-appeal/template.html
@@ -3,6 +3,9 @@
 {% from "components/header.njk" import header %}
 {% from "components/phase_banner.njk" import phaseBanner %}
 
+{% block pageTitle %}
+{{ content.titleHead | safe }} - {{ commonContent[htmlLang].ibca.windowTitleSuffix if isIba else commonContent[htmlLang].windowTitleSuffix | safe }}
+{% endblock %}
 {% set title = content.title | safe %}
 
 {% block head %}
