--- a/steps/reasons-for-appealing/reason-for-appealing/template.html
+++ b/steps/reasons-for-appealing/reason-for-appealing/template.html
@@ -17,7 +17,7 @@
     </noscript>
 {% endblock %}
 
-% set title %}
+{% set title %}
     {{ content.title | safe if isListMode }}
     {{ content.titleEdit | safe if isEditMode }}
 {% endset %}
