--- a/steps/reasons-for-appealing/reason-for-appealing/template.html
+++ b/steps/reasons-for-appealing/reason-for-appealing/template.html
@@ -58,11 +58,11 @@
 
 {% block listItems %}
     {% if isIba %}
-        <p class="govuk-body">{{ content.ibaExplained | safe }}</p>
-        <p class="govuk-body">{{ content.readYouIRN | safe }}</p>
+        <p class="govuk-body">{{ content.ibaExplained }}</p>
+        <p class="govuk-body">{{ content.readYouIRN }}</p>
     {% else %}
-        <p class="govuk-body">{{ content.dwpExplained | safe }}</p>
-        <p class="govuk-body">{{ content.readYouMRN | safe }}</p>
+        <p class="govuk-body">{{ content.dwpExplained }}</p>
+        <p class="govuk-body">{{ content.readYouMRN }}</p>
     {% endif %}
     {{ super() }}
 {% endblock %}
